src/main.css
@import '@zendeskgarden/css-bedrock';
@import '@zendeskgarden/css-buttons/dist/index.css';
@import '@zendeskgarden/css-forms/dist/index.css';
@import '@zendeskgarden/css-tags/dist/index.css';
@import '@zendeskgarden/css-utilities/dist/index.css';
@import '@zendeskgarden/css-grid/dist/index.css';
@import '@zendeskgarden/css-pagination/dist/index.css';
@import '@zendeskgarden/css-tables/dist/index.css';
@import '@zendeskgarden/css-tooltips/dist/index.css';
@import '@zendeskgarden/css-arrows/dist/index.css';
@import '@zendeskgarden/css-callouts/dist/index.css';
@import '@zendeskgarden/css-menus/dist/index.css';

.loader {
  left: 50%;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 36px;
}
.search-app {
  overflow: hidden;
  padding: 0 3px;
}
#search-submit {
  height: 30px; 
  width: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
  &.is-loading {
    svg {
      display: none;
    }
    background: transparent center / contain no-repeat url("dot.gif");
  }
}
div.c-txt__input {
  align-items: center;
  padding-bottom: 0;
  padding-right: 5px;
  padding-top: 0;
}
.c-chk__input {
  & ~ label {
    cursor: pointer;
    &:hover {
      text-decoration: underline;
    }
  }
  & ~ .c-chk__label__checked {
    display: none;
  }
  & ~ .c-chk__label__unchecked {
    display: inline-block;
  }

  &:checked {
    & ~ .c-chk__label__checked {
      display: inline-block;
    }
    & ~ .c-chk__label__unchecked {
      display: none;
    }
  } 
} 
.advanced-options-wrapper,
.ticket-only {
  display: none;
}
#ticket-status {
  .c-menu {
    margin-top: 4px;
    z-index: 1;
  }
}
.results-wrapper {
  table {
    table-layout: auto;
    tr {
      .c-tooltip {
        display: none;
        font-size: 12px;
        left: 120px;
        padding: 10px;
        position: absolute;
        top: 50%;
        transform: translateY(-50%);
        width: 200px;
        z-index: 1;
      }
      &:hover {
        .c-tooltip {
          display: block;
        }
      }
      &:last-child {
        .c-tooltip {
          bottom: 0;
          top: auto;
          transform: none;
          &.c-arrow--l:before, &.c-arrow--l:after {
            bottom: 15px;
            top: auto;
          }
        }
      }
    }
  }
}

